--- a/public/Clearpro.html
+++ b/public/Clearpro.html
@@ -643,7 +643,7 @@
     <div class="app-container">
         <!-- Header -->
         <div class="header">
-            <img src="assets/clearpro-logo.svg" alt="ClearPro logo" style="height:45px; width:auto;">
+            <img src="assets/clearpro-new.svg" alt="ClearPro logo" style="height:45px; width:auto;">     
             <div class="header-text">
                 <h1>ClearPro</h1>
                 <p>Case: AJ-2024-028 | Emily Johnson | <span class="status-badge status-active">Active</span></p>
