--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0d6efd">
 <meta name='viewport' content='width=device-width, initial-scale=1'/><!DOCTYPE html>
 <html lang="en">
 <head>
