--- a/public/index.html
+++ b/public/index.html
@@ -1506,5 +1506,12 @@ async function loadClinicalData(){
             loadAligners();
         };
     </script>
+    
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker registered"))
+    .catch(err => console.log("Service Worker failed:", err));
+}
+    </script>
 </body>
 </html>
