--- a/public/index.html
+++ b/public/index.html
@@ -1364,7 +1364,7 @@
         }
 
         // Event listeners
-        function setupEventListeners() {
+        async function setupEventListeners() {
             // Aligner form submission
             document.getElementById('aligner-form').addEventListener('submit', function(e) {
                 e.preventDefault();
